got text wrap working correctly

--- a/default.css
+++ b/default.css
@@ -80,6 +80,7 @@
 #preview-text {
   font-family: "Nunito", Arial;
   font-size: 14px;
+  word-break: keep-all;
 }
 
 input[type="text"] {
